--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "dev": "node --watch --no-deprecation --env-file=.env app.js",
+    "dev": "node --watch --no-deprecation app.js",
     "start": "node --no-deprecation app.js",
-    "setup": "node --env-file=.env config/setup.js",
+    "setup": "node config/setup.js",
     "build": "node build.js"
   },
   "keywords": [],
