--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "dev": "node --watch --no-deprecation app.js",
+    "dev": "node --watch --no-deprecation --env-file=.env app.js",
     "start": "node --no-deprecation app.js",
     "setup": "node config/setup.js",
     "build": "npm i"
