--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "google-auth-library": "^9.15.1",
     "mime-types": "^3.0.1",
     "mongoose": "^8.12.1",
+    "node-fetch": "^3.3.2",
     "redis": "^5.8.2",
     "resend": "^6.0.3",
     "zod": "^3.25.67"
