--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,7 @@ jobs:
             
             # Update code with branch specification
             echo "📥 Pulling code..."
-            git pull origin main
+            git pull
             
             # Install deps with correct flags and quiet mode
             echo "📦 Installing backend dependencies..."
