--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,42 +22,40 @@ jobs:
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -H "$SSH_HOST" >> ~/.ssh/known_hosts 2>/dev/null
 
+      # Minimal fixes to your working version:
       # 2. Deploy to remote server
       - name: Deploy backend on EC2
         run: |
-          set -e  # Exit if SSH fails
           ssh "${SSH_USER}@${SSH_HOST}" 'bash -s' << 'EOF'
-            set -e  # Exit on any remote command failure
-            
+            set -e
+
             echo "🚀 Starting backend deployment..."
-            
-            # Use environment variable instead of hardcoded path
-            cd "$REMOTE_APP_DIR"
-            
-            # Clean old logs (silent if fails)
+
+            cd "$REMOTE_APP_DIR"  # Use variable instead of hardcoded path
+
+            # Clean old logs
             echo "🧹 Cleaning logs..."
-            pm2 flush "$PM2_APP_NAME" >/dev/null 2>&1 || true
-            
-            # Update code with branch specification
+            pm2 flush "$PM2_APP_NAME" 2>/dev/null || true  # Use variable
+
+            # Update code
             echo "📥 Pulling code..."
             git pull
-            
-            # Install deps with correct flags and quiet mode
-            echo "📦 Installing backend dependencies..."
-            npm ci --no-audit --no-fund --silent
-            
-            # Restart app with update-env flag
+
+            # Install deps with correct flag
+            echo "📦 Installing backend dependencies (npm ci)..."
+            npm ci --no-audit --no-fund  # Fixed flag
+
+            # Restart app
             echo "🔄 Reloading app..."
-            pm2 reload "$PM2_APP_NAME" --update-env
-            
-            # Show status with minimal output
+            pm2 reload "$PM2_APP_NAME"  # Use variable
+
+            # Show status
             echo ""
-            echo "✅ Deployment complete at \$(date)"
-            echo "📊 Current status:"
-            pm2 list "$PM2_APP_NAME" --silent || pm2 list
-            
-            # Show recent logs (cleaner output)
+            echo "✅ Deployment complete!"
+            echo "📊 Status:"
+            pm2 list "$PM2_APP_NAME"  # Use variable
+
             echo ""
-            echo "📝 Recent application logs:"
-            pm2 logs "$PM2_APP_NAME" --lines 3 --nostream --raw 2>/dev/null || echo "No recent logs available"
+            echo "📝 Recent logs:"
+            pm2 logs "$PM2_APP_NAME" --lines 5 --nostream 2>/dev/null || echo "No logs yet"
           EOF
